--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,19 @@
             "type": "codelldb",
             "request": "launch",
             "program": "bin/vv",
-            "args": ["bash"],
+            "args": ["zsh"],
+            "stopAtEntry": false,
+            "cwd": "${fileDirname}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "lldb"
+        },
+        {
+            "name": "Debug double",
+            "type": "codelldb",
+            "request": "launch",
+            "program": "bin/vv",
+            "args": ["bash", "ls"],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
