Fix Clear Screen commands
* Add tests to verify delete commands
* Rename cursor struct to better reflect content
* Make clear region code correctly operate on virtual line indexes

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,19 @@
             "type": "codelldb",
             "request": "launch",
             "program": "bin/dump",
-            "args": ["../log_vim.bin"],
+            "args": ["../top_log.ansi"],
+            "stopAtEntry": false,
+            "cwd": "${fileDirname}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "lldb"
+        },
+        {
+            "name": "Debug top",
+            "type": "codelldb",
+            "request": "launch",
+            "program": "bin/vv",
+            "args": ["vim"],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
