debug: show foreground session in integrated terminal

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -35,6 +35,7 @@
       "args": [ "--foreground" ],
       "cwd": "${workspaceFolder}",
       "preLaunchTask": "make all",
+      "console": "integratedTerminal",
       "initCommands": [
         "command source ${workspaceFolder}/lldb-config"
       ]
