--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,7 +22,7 @@
       "args": [ "--foreground" ],
       "cwd": "${workspaceFolder}",
       "preLaunchTask": "make all",
-      "console": "externalTerminal",
+      "console": "integratedTerminal",
       "initCommands": [
         "command source ${workspaceFolder}/lldb-config"
       ]
