Improve scrollback buffer
This introduces a double ended circular buffer instead of the previously
maintenance-costly vector soolution

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -34,6 +34,7 @@
       "program": "${workspaceFolder}/bin/test",
       "cwd": "${workspaceFolder}",
       "preLaunchTask": "make all",
+      "console": "integratedTerminal",
       "initCommands": [
         "command source ${workspaceFolder}/lldb-config"
       ]
