WIP: lua arrange logic

--- a/lua/velvet/.luarc.json
+++ b/lua/velvet/.luarc.json
@@ -1,5 +1,10 @@
 {
   "runtime.version": "Lua 5.5",
-  "workspace.library": [ ]
+  "workspace.library": [ ],
+  "diagnostics": {
+    "enable": true,
+    "globals": ["vv"],
+    "disable": ["lowercase-global"]
+  },
 }
 
