Migrate status bar to lua
* implement status bar as lua window
* add enumeration values to spec
* add event system to spec
* add codegen for marshalling C events to lua tables
* propagate key events to lua windows
* allow lua windows to write to their emulator
* delete most of the obsolete cli api
* move (almost) all focus management to lua

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,8 +22,7 @@
       "args": [ "--foreground", "--socket", "/tmp/velvet-debug" ],
       "cwd": "${workspaceFolder}",
       "preLaunchTask": "make all",
-      // "console": "integratedTerminal",
-      "console": "externalTerminal",
+      "console": "integratedTerminal",
       "initCommands": [
         "command source ${workspaceFolder}/lldb-config"
       ]
